--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,8 @@
   "author": "ritik saxena",
 
   "browser_action":{
-    "default_icon":"abc.png",
-    "default_title": "newtab"
+    "default_icon":"dark.png",
+    "default_title": "newTab"
   },
   "background":{
     "persistent":false,
@@ -16,7 +16,9 @@
   },
   "content_scripts":[{
     "js":["script.js"],
-    "css":["style.css"],
     "matches":["<all_urls>"]
-    }]
+    }],
+    "permissions":[
+      "activeTab"
+    ]
 }
