--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "default_title": "newTab"
   },
   "background":{
-    "persistent":false,
+    "persistent":true,
     "scripts":["background.js"]
   },
   "content_scripts":[{
